# Main_MiSTer

./: .editorconfig  .gitignore  DetailedResolutionClass.cpp  DetailedResolutionClass.h  DiskImage.cpp  DiskImage.h  HDMI_CEC.md  LPF20000.txt  LPF2000_2tap.txt  LPF2000_3tap.txt  Makefile  MiSTer.ini  MiSTer.pro  MiSTer.sln  MiSTer.vcxproj  MiSTer.vcxproj.filters  MiSTerDefaults.ini  MiSTer_noface  N64-database.txt  Pokemon Crystal.sav  README.md  achievements.cpp  achievements.h  achievements_console.h  achievements_console_lookup.cpp  achievements_gameboy.cpp  achievements_gba.cpp  achievements_genesis.cpp  achievements_megacd.cpp  achievements_n64.cpp  achievements_neogeo.cpp  achievements_nes.cpp  achievements_psx.cpp  achievements_s32x.cpp  achievements_sms.cpp  achievements_snes.cpp  archie.c  archie.cpp  archie.h  audio.cpp  (+170 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml  ci.yml  ci_build.yml
lib/adflib/: adf_bitm.c  adf_bitm.h  adf_blk.h  adf_cache.c  adf_cache.h  adf_defs.h  adf_dir.c  adf_dir.h  adf_disk.c  adf_disk.h  adf_dump.c  adf_dump.h  adf_env.c  adf_env.h  adf_err.h  adf_file.c  adf_file.h  adf_hd.c  adf_hd.h  adf_link.c  adf_link.h  adf_raw.c  adf_raw.h  adf_salv.c  adf_salv.h  adf_str.h  adf_util.c  adf_util.h  adflib.h  config.h  defendian.h  hd_blk.h  (+1 more)
lib/miniz/: .clang-format  .travis.yml  CMakeLists.txt  amalgamate.sh  miniz.h  miniz_tdef.c  miniz_tinfl.c  miniz_zip.c  miniz_zip.h  test.sh
lib/miniz/tests/: miniz_tester.cpp
releases/: MiSTer  MiSTer_20170615  MiSTer_20170616  MiSTer_20170623  MiSTer_20170703  MiSTer_20170704  MiSTer_20170705  MiSTer_20170707  MiSTer_20170707b  MiSTer_20170712  MiSTer_20170717  MiSTer_20170721  MiSTer_20170803  MiSTer_20170805  MiSTer_20170806  MiSTer_20170813  MiSTer_20170818  MiSTer_20170821  MiSTer_20170901  MiSTer_20170902  MiSTer_20170922  MiSTer_20170930  MiSTer_20171008  MiSTer_20171009  MiSTer_20171016  MiSTer_20171031  MiSTer_20171102  MiSTer_20171112  MiSTer_20171115  MiSTer_20171126  MiSTer_20171215  MiSTer_20171216  MiSTer_20171228  MiSTer_20171229  MiSTer_20180101  MiSTer_20180103  MiSTer_20180115  MiSTer_20180304  MiSTer_20180310  MiSTer_20180316  (+210 more)
(+147 files in other folders)
